--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -2,4 +2,8 @@
   --bg-color: rgb(193, 193, 195);
   --primary-color: rgb(36, 2, 255);
   --secondary-color: rgb(3, 20, 88);
+
+  --inverted-bg-color: rgb(11, 11, 136);
+  --inverted-primary-color: rgb(2, 255, 27);
+  --inverted-secondary-color: rgb(40, 127, 6);
 }
