--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,5 +7,14 @@
   font: var(--font-m);
   background-color: var(--bg-color);
   color: var(--primary-color);
-  min-height: 100vh;
+  height: 100vh;
+}
+
+.content {
+  display: flex;
+}
+
+.page-wrapper {
+  flex-grow: 1;
+  padding: 20px;
 }
