--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,20 +1,20 @@
-@use "./reset.scss";
-@use "./variables/global.scss";
-@use "./themes/light.scss";
-@use "./themes/dark.scss";
+@use './reset';
+@use './variables/global';
+@use './themes/light';
+@use './themes/dark';
 
 .app {
-  font: var(--font-m);
-  background-color: var(--bg-color);
-  color: var(--primary-color);
-  height: 100vh;
+    font: var(--font-m);
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    height: 100vh;
 }
 
 .content {
-  display: flex;
+    display: flex;
 }
 
 .page-wrapper {
-  flex-grow: 1;
-  padding: 20px;
+    flex-grow: 1;
+    padding: 20px;
 }
