--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
 .app.dark {
-  --bg-color: rgb(11, 11, 136);
-  --primary-color: rgb(2, 255, 27);
-  --secondary-color: rgb(40, 127, 6);
-
-  --inverted-bg-color: rgb(193, 193, 195);
-  --inverted-primary-color: rgb(36, 2, 255);
-  --inverted-secondary-color: rgb(3, 20, 88);
+    --bg-color: rgb(11 11 136);
+    --primary-color: rgb(2 255 27);
+    --secondary-color: rgb(40 127 6);
+    --inverted-bg-color: rgb(193 193 195);
+    --inverted-primary-color: rgb(36 2 255);
+    --inverted-secondary-color: rgb(3 20 88);
 }
