--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,22 +1,14 @@
 :root {
-  // font
-  --font-family-main: Consolas, "Courier New", monospace;
-
-  --font-size-m: 16px;
-  --font-size-l: 24px;
-
-  --font-line-m: 24px;
-  --font-line-l: 32px;
-
-  --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
-  --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
-
-  // sizes
-  --navbar-h: 50px;
-  --with-out-navbar-h: calc(100vh - var(--navbar-h));
-
-  --border-r: 5px;
-
-  --sidebar-w: 300px;
-  --sidebar-collapsed-w: 100px;
+    --font-family-main: consolas, 'Courier New', monospace;
+    --font-size-m: 16px;
+    --font-size-l: 24px;
+    --font-line-m: 24px;
+    --font-line-l: 32px;
+    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+    --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+    --navbar-h: 50px;
+    --with-out-navbar-h: calc(100vh - var(--navbar-h));
+    --border-r: 5px;
+    --sidebar-w: 300px;
+    --sidebar-collapsed-w: 100px;
 }
