--- a/src/shared/uikit/Loader/Loader.module.scss
+++ b/src/shared/uikit/Loader/Loader.module.scss
@@ -1,4 +1,5 @@
 /* HTML: <div class="loader"></div> */
+
 /* HTML: <div class="loader"></div> */
 .dots {
     fill: var(--inverted-bg-color);
@@ -7,5 +8,5 @@
 
 .Loader {
     width: 100px;
-    height: 100px;;
+    height: 100px;
 }
